--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ch14. SPA-形象網製作(HOHO手工水餃有限公司)</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/mycss.css">
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="./mycss.css">
+    <link rel="stylesheet" href="./all.min.css">
     <style>
         .timeline-section {
             position: relative;
@@ -231,21 +231,21 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item bg-cover active"
-                        style="background-image: url(./images/boiled\ dumpling01.avif);height: 90vh;">
+                        style="background-image: url(./dumpling01.avif);height: 90vh;">
                         <div class="carousel-caption d-none d-md-block caption-text">
                             <h5 class="fw-900 text-danger">HOHO手工大水餃介紹01</h5>
                             <p>"HOHO手工高麗菜大水餃"</p>
                         </div>
                     </div>
                     <div class="carousel-item bg-cover"
-                        style="background-image: url(./images/boiled\ dumpling02.avif);height: 90vh;">
+                        style="background-image: url(./dumpling02.avif);height: 90vh;">
                         <div class="carousel-caption d-none d-md-block caption-text">
                             <h5 class="fw-900 text-danger">HOHO手工大水餃介紹02</h5>
                             <p>"HOHO手工韭菜大水餃"</p>
                         </div>
                     </div>
                     <div class="carousel-item bg-cover"
-                        style="background-image: url(./images/boiled\ dumpling03.avif);height: 90vh;">
+                        style="background-image: url(./dumpling03.avif);height: 90vh;">
                         <div class="carousel-caption d-none d-md-block caption-text">
                             <h5 class="fw-900 text-danger">HOHO手工大水餃介紹03</h5>
                             <p>"HOHO手工鮮蝦大水餃"</p>
@@ -268,7 +268,7 @@
         <section id="s04">
             <div class="row">
                 <div class="col-md-5"
-                    style="background-image: url(./images/boiled\ dumpling04.avif); height: 600px;background-attachment: fixed; background-position: -500px 200px; background-size: cover;">
+                    style="background-image: url(./dumpling04.avif); height: 600px;background-attachment: fixed; background-position: -500px 200px; background-size: cover;">
                 </div>
                 <div class="col-md-7 p-5">
                     <h1>西元2020年 <span class="text-success">中部首選</span></h1>
@@ -305,7 +305,7 @@
         </section>
         <!-- section 05 -->
         <section id="s05" class="bg-dark bg-cover"
-            style="background-image: url(./images/boiled\ dumpling05.avif); background-attachment: fixed;">
+            style="background-image: url(./dumpling05.avif); background-attachment: fixed;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 text-white py-5 me-auto">
@@ -341,7 +341,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="myimg bg-cover"
-                                        style="background-image: url(./images/韭菜水餃.jpg); height: 360px;">
+                                        style="background-image: url(./韭菜水餃.jpg); height: 360px;">
                                     </div>
                                 </div>
                             </div>
@@ -359,7 +359,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="myimg bg-cover"
-                                        style="background-image: url(./images/鮮蝦水餃.jpg); height: 360px;">
+                                        style="background-image: url(./鮮蝦水餃.jpg); height: 360px;">
                                     </div>
                                 </div>
                             </div>
@@ -378,7 +378,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="myimg bg-cover"
-                                        style="background-image: url(./images/高麗菜水餃.jpg); height: 360px;">
+                                        style="background-image: url(./高麗菜水餃.jpg); height: 360px;">
                                     </div>
                                 </div>
                             </div>
@@ -424,7 +424,7 @@
         <section id="s07" class="bg-light" style="position: relative;">
             <div class="row">
                 <div class="col-md-5 bg-cover wow animate__rollIn"
-                    style="background-image: url(./images/boiled\ dumpling08.avif); position: absolute; top: 0; bottom: 0;"
+                    style="background-image: url(./dumpling08.avif); position: absolute; top: 0; bottom: 0;"
                     data-wow-duration="2s" data-wow-delay="0s" data-wow-iteration="1"></div>
             </div>
             <div class="container">
@@ -579,7 +579,7 @@
             </div>
             <div class="row justify-content-end">
                 <div class="col-md-5 bg-cover"
-                    style="background-image: url(./images/cabbage10.jpg); position: absolute; top: 0; bottom: 0;"></div>
+                    style="background-image: url(./cabbage10.jpg); position: absolute; top: 0; bottom: 0;"></div>
             </div>
         </section>
 
@@ -623,7 +623,7 @@
         <!-- section 11 -->
         <section id="s10">
             <div class="row">
-                <div class="col-md-6 bg-cover" style="background-image: url(./images/people06.avif); height: 360px;">
+                <div class="col-md-6 bg-cover" style="background-image: url(./people06.avif); height: 360px;">
                     <div class="row">
                         <div class="col-md-7 p-5 wow animate__tada" data-wow-duration="2s" data-wow-delay="1s"
                             data-wow-iteration="1">
@@ -642,7 +642,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 bg-cover" style="background-image: url(./images/people05.avif); height: 360px;">
+                <div class="col-md-6 bg-cover" style="background-image: url(./people05.avif); height: 360px;">
                     <div class="row">
                         <div class="col-md-7 p-5 wow animate__tada" data-wow-duration="2s" data-wow-delay="1s"
                             data-wow-iteration="1">
@@ -662,7 +662,7 @@
                 data-wow-delay="1s" data-wow-iteration="2">熱門水餃口味</div>
             <div class="row">
                 <div class="col-md-4 bg-cover"
-                    style="background-image: url(./images/高麗菜水餃.jpg); height: 360px;">
+                    style="background-image: url(./高麗菜水餃.jpg); height: 360px;">
                     <div class="row">
                         <div class="col-md-7 p-5 wow animate__tada" data-wow-duration="2s" data-wow-delay="1s"
                             data-wow-iteration="1">
@@ -673,7 +673,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 bg-cover" style="background-image: url(./images/韭菜水餃.jpg); height: 360px;">
+                <div class="col-md-4 bg-cover" style="background-image: url(./韭菜水餃.jpg); height: 360px;">
                     <div class="row">
                         <div class="col-md-7 p-5 wow animate__tada" data-wow-duration="2s" data-wow-delay="1s"
                             data-wow-iteration="1">
@@ -684,7 +684,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 bg-cover" style="background-image: url(./images/鮮蝦水餃.jpg); height: 360px;">
+                <div class="col-md-4 bg-cover" style="background-image: url(./鮮蝦水餃.jpg); height: 360px;">
                     <div class="row">
                         <div class="col-md-7 p-5 wow animate__tada" data-wow-duration="2s" data-wow-delay="1s"
                             data-wow-iteration="1">
@@ -767,8 +767,8 @@
             </div>
         </section>
 
-        <script src="./js/bootstrap.bundle.min.js"></script>
-        <script src="./js/jquery-3.7.1.min.js"></script>
+        <script src="./bootstrap.bundle.min.js"></script>
+        <script src="./jquery-3.7.1.min.js"></script>
         <script src="https://unpkg.com/counterup2@2.0.2/dist/index.js"></script>
         <script>
             $(function () {
